--- a/_posts/2013-08-01-ch01-5values.md
+++ b/_posts/2013-08-01-ch01-5values.md
@@ -1,7 +1,8 @@
 ---
 layout: chapter
 title: Five VALUES I would Definitely Develop in My Child
-permalink: five-values
+permalink: "five-values"
+published: true
 ---
 
 My friend Sridhar has been behind me with this question - what are the CORE VALUES one should develop in one's child? Just yesterday a father in geniekids told a lie to his child who was unwilling to leave, "Uncle is closing office, so let’s go" - which wasn't true! What is the point of developing conventional values if we are all going to anyway follow them out-of-convenience later? So what values will I teach my child?
@@ -45,4 +46,4 @@ Traditional values tend to preach the child what is right or what is wrong? On o
 
 Let me sum it up with a quote by Osho – Rajneesh:  
 
-“I say over and over again that if you want your children to know the truth you must give them the chance to think creatively. Stop conditioning them with beliefs; allow them to understand things for themselves. Creativity will become their capacity for life; creativity will become their wisdom. That capacity and that wisdom will lead them to the uncharted sea of truth”.
+> “I say over and over again that if you want your children to know the truth you must give them the chance to think creatively. Stop conditioning them with beliefs; allow them to understand things for themselves. Creativity will become their capacity for life; creativity will become their wisdom. That capacity and that wisdom will lead them to the uncharted sea of truth”.
