--- a/_posts/2013-08-10-wish.md
+++ b/_posts/2013-08-10-wish.md
@@ -4,7 +4,7 @@ title: Writing Wish
 permalink: wish
 ---
 
-Perhaps this incident will ring a familiar bell: We were in a bookstore when my daughter Asawari (2-1/2 yrs), who is very fond of books, also wanted to buy a few. She went about picking the books, some, which she already has. As usual, we said "No, you have these books so we cannot buy them now. No, just few days back we bought you books.”
+Perhaps this incident will ring a familiar bell -  We were in a bookstore when my daughter Asawari (2-1/2 yrs), who is very fond of books, also wanted to buy a few. She went about picking the books, some, which she already has. As usual, we said "No, you have these books so we cannot buy them now. No, just few days back we bought you books.”
 
 As expected this did not deter her, leading to obstinate insistence and then crying. More we tried explaining and pressurizing, more the situation became embarrassing. I got an idea - I took out one pen and paper and started writing all the books Asawari wanted to buy. I made small graphic for each book and wrote the names. Below in block letters I wrote "Asawari wants to buy these books". Asawari took that paper and got involved in reviewing her wish list. She forgot to cry and came out of the shop happily. She kept that paper with her.
 
