--- a/_posts/2013-08-01-5values.md
+++ b/_posts/2013-08-01-5values.md
@@ -2,11 +2,12 @@
 layout: chapter
 title: Five VALUES I would Definitely Develop in My Child
 permalink: "five-values"
+published: true
 ---
 
 My friend Sridhar has been behind me with this question - what are the CORE VALUES one should develop in one's child? Just yesterday a father in geniekids told a lie to his child who was unwilling to leave, "Uncle is closing office, so let’s go" - which wasn't true! What is the point of developing conventional values if we are all going to anyway follow them out-of-convenience later? So what values will I teach my child?
 
-Here is my FIVE MUST-HAVE list:
+Here is my five must- have list:
 
 1. The value of Experimentation (or Trying)
 
