--- a/_posts/2013-08-01-bholu1.md
+++ b/_posts/2013-08-01-bholu1.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Bholu the Bear - Part One
 permalink: bholu1
+category: self esteem
 --- 
                     
 Bholu was a happy bear. But nowadays he was not so happy, as whenever he met different animals, he wanted to be "like" them, be able to do things that they were able to do. Once he called himself Bholu the rabbit and tried running and burrowing. He couldn't and this made him sad. The other day he called himself Bholu the fox, tried to sing like one but couldn't and this made him sad. And
