--- a/_posts/2013-08-01-bholu2.md
+++ b/_posts/2013-08-01-bholu2.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Bholu the Bear - Part Two
 permalink: bholu2
+category: self esteem
 --- 
 
 One day Bholu (the bear) told his parents, "Once I grow up, I want to be a NOBODY"
