--- a/_posts/2013-08-01-freedom.md
+++ b/_posts/2013-08-01-freedom.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Freedom to Learn
 permalink: freedom
+category: play and learn
 --- 
 
 Where the mind is without fear and the head is held high;
