--- a/_posts/2013-08-01-inside.md
+++ b/_posts/2013-08-01-inside.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: What’s Inside Is What Motivates
 permalink: inside
+category: habits of mind
 --- 
 
 Those of you who read Calvin & Hobbes (comic strip by Bill Whatson) will recollect the series when Calvin produces various clones of himself. The idea being that the duplicate will perform all the menial and uninteresting functions of life (like studying, cleaning etc) while he enjoys life. Irony strikes, as each duplicate wants to enjoy himself and has exactly the same expectations and characteristics as Calvin.
