--- a/_posts/2013-08-01-moral.md
+++ b/_posts/2013-08-01-moral.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: A Moral Story
 permalink: moral
+category: values
 ---
 
 I was looking forward to the second half. The first half, of the Urdu theater show that we were watching, had been superb and anticipation was in the air. Just then I heard a pleading voice of a totally bored child, from the seats behind me, “Lets go”. I smiled, understanding at once the agony of a child in an auditorium where he has nothing of interest to see, hear or do and the challenge for the parents to continue to enjoy the show.
