--- a/_posts/2013-08-01-patience.md
+++ b/_posts/2013-08-01-patience.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: The Myth of Patience
 permalink: patience
+category: myth
 --- 
 
 A parent came to Geniekids to drop her child. She had planned that she willrun some errands after dropping him, but for some reason that day the childwas in no mood to go inside readily. So when they reached the waiting areashe said to her child, "Go". But the child just sported a blank look. Shetried again, "Go, GO IN, everybody is going inside". But the child was notbudging. Soon her volume and tone of voice raised as she tried, "GO INSIDE,session is starting, aunty is waiting, GO IN". Soon she was very irritatedand said, "Why don't you GO" I have to go, now GOOOOOO".
