--- a/_posts/2013-08-01-peers.md
+++ b/_posts/2013-08-01-peers.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Peers - Fear or Dear
 permalink: peers
+category: feelings
 --- 
 
 I have a crisp 100 rupee note, do you want it?
