--- a/_posts/2013-08-01-role.md
+++ b/_posts/2013-08-01-role.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Role Reversal
 permalink: role
+category: parent
 ---
 
 We get lots of mails from parents, "I have problem with my child, learning problem, discipline problem, school problem, writing problem, eating problem, concentration problem, etc". What if the child could also write to us voicing his problem with his parents, "They do not understand me, they push me to perform, they do not accept me as an individual, they have double standards for children and adults, etc".
