--- a/_posts/2013-08-01-time.md
+++ b/_posts/2013-08-01-time.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: The Myths of Quality Time
 permalink: quality
+category: myth
 --- 
 
 Once in Animal Kingdom, the animals met to complain about the humans. The cow said, “They take away my milk!” The sheep cribbed about her wool being taken. The hen was upset that her eggs are taken by humans. The horse complained about humans taking all his energy. But the snail was smiling, “I have something they need, but they don’t seem to care about it - TIME!”
