--- a/_posts/2013-08-10-children.md
+++ b/_posts/2013-08-10-children.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Raising Resourceful Children
 permalink: children
+category: habits of mind
 ---
 
 It was snowing. The little bear came up to his mummy and said, “It’s very cold”. Mother bear fished out and put on his head a cap. “Hurray! I got a cap, now I can go out and play”, said the little bear. But he was soon back, “It’s very cold”. “Very well”, mother bear said and put on a jacket for him. “Hurray! I got a jacket, now I can go out and play”, said the little bear. But he was soon back, “Now what is it, said the mother a little irritatingly. “Its very cold”, the little bear replied. “Very well”, mother bear said and put on a pair snow pants for him.
