--- a/_posts/2013-08-10-dream.md
+++ b/_posts/2013-08-10-dream.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: I am not your Dream Girl
 permalink: dream
+category: self esteem
 ---
 
 "I am not your Dream Girl" - screamed a teenager's t-shirt. I initially laughed it off as another smart t-shirt message.
