--- a/_posts/2013-08-10-empathy.md
+++ b/_posts/2013-08-10-empathy.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Empathy
 permalink: empathy
+category: feelings
 ---
 
 There was an old woman in China who had supported the meditations of a monk for over ten years by building a little hut for him and feeding him while he was meditating.
