--- a/_posts/2013-08-10-empower.md
+++ b/_posts/2013-08-10-empower.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Emotional Empowerment
 permalink: empower
+category: feelings
 ---
 
 The biggest mistake we do with children is to LIMIT them.
