--- a/_posts/2013-08-10-five.md
+++ b/_posts/2013-08-10-five.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Five Things I would allow my child this Summer
 permalink: five
+category: play and learn
 ---
 
 A boy was sitting on the edge of a lake, looking yonder.
