--- a/_posts/2013-08-10-gandhi.md
+++ b/_posts/2013-08-10-gandhi.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: The Myth of Gandhiji's 3-Monkeys
 permalink: gandhi
+category: myth
 ---
 
 Two monks came across a swollen river that they had to cross. A young damsel, who had hurt herself, was waiting for some help to cross the same river. The elder monk carried her on his back crossed the river, and dropped her off at the other bank.
