--- a/_posts/2013-08-10-grow.md
+++ b/_posts/2013-08-10-grow.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Letting Grow
 permalink: grow
+category: parent
 ---
 
 A mother thought that she had a very disobedient and naughty child. She used to close the child in a storeroom when the situation went out of hand. One day as she was taking her child to shut in the store, a realization dawned to her. Instead of shoving him inside the store, she entered with him inside the store and said, "Son, I have a huge apology to make. It is my fault that you are so disobedient. You were not born this way. This is the way I have brought you up to be. Please forgive me. I am going to try to be a better mother for you. As part of the promise, I will stay in the store with you today".
