--- a/_posts/2013-08-10-lie.md
+++ b/_posts/2013-08-10-lie.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Teach your child how to Lie
 permalink: lie
+category: values
 ---
 
 No, no there is no typo mistake in the title above - I do mean to talk about teaching a child TO TELL LIEs.
