--- a/_posts/2013-08-10-locus.md
+++ b/_posts/2013-08-10-locus.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Locus of Control
 permalink: locus
+category: habits of mind
 ---
 
 A father was driving with her little daughter. A vehicle behind their car was honking wildly for way. The father, already little flustered with the traffic, shouted at the driver behind for honking and resolved loudly that come whatever he is not going to give way.
