--- a/_posts/2013-08-10-notlie.md
+++ b/_posts/2013-08-10-notlie.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Teach your child how NOT to Lie
 permalink: notlie
+category: values
 ---
 
 This article is a sequel - so we almost insist that you read the first article before you read this one - click here to read "Teach your child how to lie"
