--- a/_posts/2013-08-10-raising.md
+++ b/_posts/2013-08-10-raising.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Raising Successful Children - Self Belief
 permalink: raising
+category: habits of mind
 ---
 
 The other day I went to a restaurant and ordered a sizzler. Somehow I attacked the baked tomato first and realized it was only half cooked. I called the waiter and showed him the tomato and he very casually pointed out- "But Sir, the rest of the platter is fine. At that moment, I was furious.
