--- a/_posts/2013-08-10-response.md
+++ b/_posts/2013-08-10-response.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Responsive Response
 permalink: response
+category: communication
 ---
 
 Suppose you as a child lost your cricket match. Disappointed, you reach homeand break the news. We have three versions for you – pause after each and thinkhow it makes you feel.
