--- a/_posts/2013-08-10-reward.md
+++ b/_posts/2013-08-10-reward.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: The Myth of Rewards
 permalink: reward
+category: myth
 ---
 
 An old hunchback was constantly teased and abused by the neighborhood children. One day he told them that each will get Rs10 for teasing and abusing him for one hour every day. Kids were overjoyed and did the worst teasing and abusing possible. After few days the old man informed that now onwards they would be getting Rs 5 per day for their job. Still kids were happy and did their job well. The next day the old man revised the rate to Rs 2 and children were clearly disappointed. Some dropped out. Finally the next day the old man said that now onwards he is stopping these payments. Children stopped teasing and abusing.
