--- a/_posts/2013-08-10-succeed.md
+++ b/_posts/2013-08-10-succeed.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Letting Succeed
 permalink: succeed
+category: parent
 ---
 
 This article is a sequel to the article "letting Grow". It is advisable to go through the previous article before you read this one to get the most out of this one.
