--- a/_posts/2013-08-10-thumb.md
+++ b/_posts/2013-08-10-thumb.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: The Myth of Thumb Sucking
 permalink: thumb
+category: myth
 ---
 
 The other day, a friend of mine came home and their daughter, about nine months old, was sucking her thumb. I eagerly expressed my joy on seeing her sucking her thumb. My friend, obviously quite puzzled by this, asked me why, when the whole world fusses over sucking, am I glad? So I asked him, "What do you do when you are under stress or trauma? When you are lost, when you cannot think of a solution? My friend was quite surprised by this kind of questioning and fell quiet, instead his wife answered. She said, "Sometimes when I am really tense, I take the name of God". I replied, "That means you too suck thumb"! This confused both of them even more.
