--- a/_posts/2013-08-10-wealthy.md
+++ b/_posts/2013-08-10-wealthy.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Raising Wealthy Children
 permalink: wealthy
+category: values
 ---
 
 “The greatest reward for my efforts is what I become” 
