--- a/_posts/2013-08-10-year.md
+++ b/_posts/2013-08-10-year.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Parenting Year of Play
 permalink: year
+category: parent
 ---
 
 Lets make a resolution for whole of 2011 - I will Play.
