--- a/_posts/2013-08-10-yield.md
+++ b/_posts/2013-08-10-yield.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: To Yield or Not to Yield
 permalink: yield
+category: discipline
 ---
 
 “My daughter wants to have her food only in the special bowl that her aunt had brought instead of the plate in which I gave her. I was tempted to get the plate for her.” Then I wondered if acceding to simple demands would spoil her?
