--- a/_posts/2013-08-10-wish.md
+++ b/_posts/2013-08-10-wish.md
@@ -2,6 +2,7 @@
 layout: chapter
 title: Writing Wish
 permalink: wish
+category: discipline
 ---
 
 Perhaps this incident will ring a familiar bell -  We were in a bookstore when my daughter Asawari (2-1/2 yrs), who is very fond of books, also wanted to buy a few. She went about picking the books, some, which she already has. As usual, we said "No, you have these books so we cannot buy them now. No, just few days back we bought you books.”
