--- a/_posts/2013-08-01-bholu2.md
+++ b/_posts/2013-08-01-bholu2.md
@@ -1,11 +1,12 @@
 ---
 layout: chapter
-title: Bholu the Bear - Part Two
+title: "Bholu the Bear - Part Two"
 permalink: bholu2
 category: self esteem
---- 
+published: true
+---
 
-One day Bholu (the bear) told his parents, "Once I grow up, I want to be a NOBODY"
+One day Bholu (the bear) told his parents, "Once I grow up, I want to be a NOBODY!"
 
 His worried parents, asked, "Why?"
 
