--- a/_posts/2013-08-10-yield.md
+++ b/_posts/2013-08-10-yield.md
@@ -3,13 +3,15 @@ layout: chapter
 title: To Yield or Not to Yield
 permalink: yield
 category: discipline
+published: true
 ---
 
 “My daughter wants to have her food only in the special bowl that her aunt had brought instead of the plate in which I gave her. I was tempted to get the plate for her.” Then I wondered if acceding to simple demands would spoil her?
 
 But then would not respecting her requests and denying her the importance damage her self-esteem. Some parents decide in favor of the child, while some take the sterner stance.
 
-But most try to balance in between, acceding sometimes and denying other times. But doesn’t this inconsistency leave the child confused, I wondered? Maybe the child starts appearing DEMANDING because uncertain of the parent’s response, she just tries her luck every time. Some parents also accede to demands in the name of love.
+But most try to balance in between, acceding sometimes and denying other times. But doesn’t this inconsistency leave the child confused, I wondered? Maybe the child starts appearing DEMANDING because uncertain of the parent’s response, she just tries her luck every time. 
+Some parents also accede to demands in the name of love.
 
 Aren’t we teaching children that “love means getting other people to take care of my demands?” Worse will be the case when agreeing to demands is used as rewards and denials as punishments – for that is teaching manipulation to the child (more about rewards & punishment in next issue).
 
