--- a/_posts/2013-08-10-yield.md
+++ b/_posts/2013-08-10-yield.md
@@ -10,8 +10,7 @@ published: true
 
 But then would not respecting her requests and denying her the importance damage her self-esteem. Some parents decide in favor of the child, while some take the sterner stance.
 
-But most try to balance in between, acceding sometimes and denying other times. But doesn’t this inconsistency leave the child confused, I wondered? Maybe the child starts appearing DEMANDING because uncertain of the parent’s response, she just tries her luck every time. 
-Some parents also accede to demands in the name of love.
+But most try to balance in between, acceding sometimes and denying other times. But doesn’t this inconsistency leave the child confused, I wondered? Maybe the child starts appearing DEMANDING because uncertain of the parent’s response, she just tries her luck every time. Some parents also accede to demands in the name of love.
 
 Aren’t we teaching children that “love means getting other people to take care of my demands?” Worse will be the case when agreeing to demands is used as rewards and denials as punishments – for that is teaching manipulation to the child (more about rewards & punishment in next issue).
 
