--- a/_posts/2013-08-10-wealthy.md
+++ b/_posts/2013-08-10-wealthy.md
@@ -6,7 +6,7 @@ category: values
 published: true
 ---
 
-“The greatest reward for my efforts is what I become.” 
+“The greatest reward for my efforts is what I become!” 
 (source unknown)
 
 When I go for my daily morning walk, I often a see an eight-year-old girl, going round and round the apartment complex, cycling alone. She does cycling for a considerable amount of time – just cycling. She invariably needs a reminder of time from her mother, otherwise she would just continue - cycling. She seems to enjoy it thoroughly, just as I would do when I was her age. She seems to be totally entertained by this simple activity.
