--- a/_posts/2013-08-10-response.md
+++ b/_posts/2013-08-10-response.md
@@ -3,19 +3,20 @@ layout: chapter
 title: Responsive Response
 permalink: response
 category: communication
+published: true
 ---
 
-Suppose you as a child lost your cricket match. Disappointed, you reach homeand break the news. We have three versions for you – pause after each and thinkhow it makes you feel.
+Suppose you as a child lost your cricket match. Disappointed, you reach home and break the news. We have three versions for you – pause after each and think how it makes you feel.
 
-Version 1: “There is nothing to be disappointed about that. Winning and losingis part of life. You need to play better next time. Cheer up; I have somechocolate cake for you before dinner.”
+Version 1: “There is nothing to be disappointed about. Winning and losing is a part of life. You need to play better next time. Cheer up, I have some chocolate cake for you before dinner.”
 
-Version 2: “You must have played quite well. Don’t think about it now. One matchis not the whole life. Even I have lost many matches in my life. Take bath now and get ready for dinner.
+Version 2: “You must have played quite well. Don’t think about it now. One match is not the whole life. Even I have lost many matches in my life. Take bath now and get ready for dinner.
 
 Let’s micro-analyze these seemingly positive responses.
 
-Version 1: Negation of feelings followed by moralizing followed by telling whatI need to do next time and trying to cheer me up with something external and materialistic.
+Version 1: Negation of feelings followed by moralizing followed by telling what I need to do next time and trying to cheer me up with something external and materialistic.
 
-Version 2: False pride and praise followed by telling to change my state of mind,followed by moralizing worsened by examples of self and finally forcing me toshift focus to undesirable task.
+Version 2: False pride and praise followed by telling to change my state of mind,followed by moralizing worsened by examples of self and finally forcing me to shift focus to undesirable task.
 
 Let’s look at another version:
 
@@ -25,16 +26,16 @@ Version 3: Accepting the feelings followed by willingness to share it withoutjud
 
 Somehow we don’t treat our children as adults. And our language automatically gets loaded up with moralizing, false praise and negating their feelings. Nothing else hurts our self esteem more than somebody questioning our being – our emotions, our pride and our intelligence.
 
-If your spouse says “I do not feel like eating tonight”, most probably you willeither show concern, “Are you feeling alright” or you may suggest, “Maybe little”or you may offer your services “do you want to have something else” or a combination of above.
-Same statement a child says and most probably one will offer a big lecture or moralize the child, command him or worse case threaten him or a combinationof above. Why so?
+If your spouse says “I do not feel like eating tonight”, most probably you will either show concern, “Are you feeling alright” or you may suggest, “Maybe little” or you may offer your services “do you want to have something else” or a combination of above.
+Same statement a child says and most probably one will offer a big lecture or moralize the child, command him or worse case threaten him or a combination of above. Why so?
 
 Look at two more similar situations:
-“Mummy, I think this drawing looks so awful”“No dear, its looks so nice”Assumption: I need to praise immediately to restore their confidence.If they think you are lying, then worse then not giving praise, is giving false praise – it hurts their self esteem that their parents are trying to cover it up for them.Alternative: If it actually looks awful, agreeing and then encouraging is better “You look disappointed by your efforts. I am sure you can do better”. If some part is nice – point out the specifics.
+“Mummy, I think this drawing looks so awful”. “No dear, it looks so nice”. Assumption: I need to praise immediately to restore their confidence.If they think you are lying, then worse than not giving praise, is giving false praise – it hurts their self esteem that their parents are trying to cover it up for them. Alternatively, if the drawing actually looks awful, agreeing and then encouraging is better - “You look disappointed by your efforts. I am sure you can do better”. If some part is nice – point out the specifics.
 
 Another classic example:
 
-“Papa, I can’t do this”“No, you can, dear”Assumption: They will believe what I have to say.This simply sounds like a false assurance – is false confidence of any use? Alternative: A specific example from past serves as a better confidence boosting anchor. “You did it last Monday” or “if you can climb a ladder, you can climb a tree”. If no past reference, use “Would you like to try another approach”. Even offering choice by “Do you need my help” elicits “OK, I will try it myself”. Even if the child takes the help, remember he feels that you are on her side.
+“Papa, I can’t do this”. “No, you can, dear”. Assumption: They will believe what I say. This simply sounds like a false assurance – is false confidence of any use? Alternative - A specific example from past serves as a better confidence boosting anchor. “You did it last Monday” or “if you can climb a ladder, you can climb a tree”. If no past reference, use “Would you like to try another approach”. Even offering choice by “Do you need my help” elicits “OK, I will try it myself”. Even if the child takes the help, remember he feels that you are on her side.
 
-Negation of feeling builds an immediate wall. False praise closes all windows;Moralizing, lectures and instructions are then not heard inside.Acceptance builds bridges, sensitive praise helps the flow of river, questions and choices spring the flowers all along.
+Negation of feeling builds an immediate wall. False praise closes all windows; Moralizing, lectures and instructions are then not heard inside. Acceptance builds bridges, sensitive praise helps the flow of river, questions and choices spring the flowers all along.
 
 Your choice!
