--- a/_posts/2013-08-10-response.md
+++ b/_posts/2013-08-10-response.md
@@ -16,13 +16,13 @@ Let’s micro-analyze these seemingly positive responses.
 
 Version 1: Negation of feelings followed by moralizing followed by telling what I need to do next time and trying to cheer me up with something external and materialistic.
 
-Version 2: False pride and praise followed by telling to change my state of mind,followed by moralizing worsened by examples of self and finally forcing me to shift focus to undesirable task.
+Version 2: False pride and praise followed by directions to change my state of mind, followed by moralizing worsened by examples of self and finally forcing me to shift focus to undesirable task.
 
 Let’s look at another version:
 
 Version 3: “You look disappointed. Tell me more about it. I am sure you can think of how you can win the next time. Meanwhile, when you are ready for dinner,I will serve it.
 
-Version 3: Accepting the feelings followed by willingness to share it withoutjudgment pepped up by having confidence in me to solve own problems andreducing disappointment by shifting focus to a ‘next time’ and lastly giving respectby allowing time to settle my own thoughts and emotions.
+Version 3: Accepting the feelings followed by willingness to share it without judgment, pepped up by having confidence in me to solve own problems and reducing disappointment by shifting focus to a ‘next time’ and lastly giving respect by allowing time to settle my own thoughts and emotions.
 
 Somehow we don’t treat our children as adults. And our language automatically gets loaded up with moralizing, false praise and negating their feelings. Nothing else hurts our self esteem more than somebody questioning our being – our emotions, our pride and our intelligence.
 
