--- a/_posts/2013-08-10-yield.md
+++ b/_posts/2013-08-10-yield.md
@@ -6,20 +6,15 @@ category: discipline
 published: true
 ---
 
-“My daughter wants to have her food only in the special bowl that her aunt had brought instead of the plate in which I gave her. I was tempted to get the plate for her.” Then I wondered if acceding to simple demands would spoil her?
+**My daughter wants to have her food only in the special bowl that her aunt had brought instead of the plate in which I gave her. I was tempted to get the plate for her.** Then I wondered if acceding to simple demands would spoil her? But then, not respecting her requests and denying her the importance can damage her self-esteem. Some parents decide in favour of the child, while some take the sterner stance.
 
-But then would not respecting her requests and denying her the importance damage her self-esteem. Some parents decide in favor of the child, while some take the sterner stance.
+Most parents try to balance in between, acceding sometimes and denying other times. However, does this inconsistency leaves the child confused? Maybe the child starts to appear DEMANDING in the wake of uncertain response and just tries her luck every time. Some parents also accede to demands in the name of love.
 
-But most try to balance in between, acceding sometimes and denying other times. But doesn’t this inconsistency leave the child confused, I wondered? Maybe the child starts appearing DEMANDING because uncertain of the parent’s response, she just tries her luck every time. Some parents also accede to demands in the name of love.
+Aren’t we teaching children that love means getting other people to take care of your demands? Worse will be the case when agreeing to demands is used as rewards and denials as punishments – for that is teaching manipulation to the child.
 
-Aren’t we teaching children that “love means getting other people to take care of my demands?” Worse will be the case when agreeing to demands is used as rewards and denials as punishments – for that is teaching manipulation to the child (more about rewards & punishment in next issue).
+Let’s explore what we can do to ease this pressure vis-à-vis self-esteem. So, while the child is confused, balancing his or her demands leaves the parents exasperated. Let’s work on some suggestions to manage this. We will take two examples: one situation described at the beginning, another of a teenager demanding to go for a late night party. The whole approach is to let the child fulfill his own desires and take his own decisions. If the child makes the decisions, he is more open to accept the consequences thereafter. 
 
-Let’s see what we can do to ease this peer pressure vis-à-vis self-esteem: So while the child is confused, balancing his or her demands leaves us parents exasperated. Let’s work on some suggestions to manage this. (We will take two examples, one situation described at the beginning, another of a teenager demanding to go for a late night party).
-
-The whole approach is to let child fulfilling his own desires himself.
-
-If the child makes the decisions, he is more open to accept the consequences. 
-1) Kick off with questions – Don’t ask “why”, instead ask “what” and “how” questions.
+**1) Kick off with questions** – Don’t ask “why”, instead ask “what” and “how” questions.
 
 To the small child:
 
@@ -35,36 +30,39 @@ To the elder child:
 
 “How will you ensure that your homework does not suffer?”
 
-2) Offer choice – again the key is that they make the decision.
+**2) Offer choices** – The key is that they take their own decision.
 
-To the small child:
+_To the small child:_
 
-“Can you get the special bowl yourself, or you want to have me to serve the next meal in that bowl. (if none of the choices are acceptable, keep adding more choice at a time – be creative).
+“Can you get the special bowl yourself, or you want me to serve the next meal in that bowl. (If none of the choices are acceptable, keep adding more choices at a time – be creative).
 
 “Do you want help with the chair, or maybe you eat sitting in a different place?”
-To the elder child:
+
+_To the elder child:_
 
 “You want to go to one party and stay really late, or go to next one also
-but come back within time from both.
+but come back within time from both."
 
-3) Inform them of consequences, without threatening them.
+**3) Inform them of consequences**, without threatening them.
 
-To the small child:
+_To the small child:_
 
-“Remember you will also have to keep your special bowl back in the sink. To the elder child:
+“Remember you will also have to keep your special bowl back in the sink. 
 
-“If you come too late that worries your mother and I really get concerned.
+_To the elder child:_
 
-4) Have faith in your child and lovely label them:
+“If you come too late that worries your mother and I really get concerned."
 
-To the small child:
+**4) Have faith in your child** and lovely label them.
 
-“I think you can easily get the bowl. You are so smart.
+_To the small child:_
 
-To the elder child:
+“I think you can easily get the bowl. You are so smart."
 
-“I know you are responsible and you will take the right decision.
+_To the elder child:_
 
-Finally, be kind and firm, firm towards needs of the situation and kind towards needs of the child. This ensures consistency in your communication also.
+“I know you are responsible and you will take the right decision."
 
-Remember a bird learns to fly, only because she is left to fulfill her demands for food herself. A parent only supports and encourages, doesn't do the flying for her.
+Finally, be kind and firm. Firm towards the needs of the situation and kind towards the needs of the child. This ensures consistency in your communication also.
+
+Remember, a bird learns to fly only when she is left to fulfill her demands of food herself. A parent only supports and encourages, doesn't do the flying for her.
