--- a/_posts/2013-08-10-raising.md
+++ b/_posts/2013-08-10-raising.md
@@ -1,25 +1,26 @@
 ---
 layout: chapter
-title: Raising Successful Children - Self Belief
+title: "Raising Successful Children - Self Belief"
 permalink: raising
 category: habits of mind
+published: true
 ---
 
-The other day I went to a restaurant and ordered a sizzler. Somehow I attacked the baked tomato first and realized it was only half cooked. I called the waiter and showed him the tomato and he very casually pointed out- "But Sir, the rest of the platter is fine. At that moment, I was furious.
+The other day, I went to a restaurant and ordered a sizzler. Somehow I attacked the baked tomato first and realized it was only half cooked. I called the waiter and showed him the tomato and he very casually pointed out- "But Sir, the rest of the platter is fine". At that moment, I was furious.
 
-It was the first gift that my six year old had wrapped herself. I saw there was this one fold that was sticking out. When I pointed out to her, she said, "Isn't the rest fine, papa?"
+It was the first gift that my six year old had wrapped herself. I saw this one fold that was sticking out. When I pointed out to her, she said, "Isn't the rest fine, papa?"
 
-It was then I realized what message the waiter had for me. We focus so much on the 10% imperfection that we forget to appreciate and get encouraged by the 90% 'perfection'. I also realized that as an adult we often berate our self - especially for these 20% imperfections that we all have. For many of us, our self talk is rarely self appreciative, rather mostly critical of ourselves. We almost think that it is not nice to feel good about oneself (that should come from somebody else). And we carry on with our own abusive self talk.
+It was then that I realized what message the waiter had for me. We focus so much on the 10% imperfection that we forget to appreciate and get encouraged by the 90% 'perfection'. I also realized that as an adult we often berate ourselves - especially for these 20% imperfections that we all have. For many of us, our self talk is rarely self appreciative, rather mostly critical of ourselves. We almost think that it is not nice to feel good about oneself (that should come from somebody else). And we carry on with our own abusive self talk.
 
 Digging deeper into the psychology texts I found out that most self criticizing habits are formed within the first eight years of life -especially between 2-8 years. Physiologists explain that this is the period when all our negatives are quickly pointed out by adults. To quote Peggy Jenkins (from 'The Joyful child'): "Overheard criticisms, put-downs, misinterpretations of parental anger or scolding can all chip away at the child's self worth and leave him feeling joyless and worthless."
 
-It becomes better after 10 years because increasingly available and important PEER evaluation is far more appreciative and less critical. But the damage is already done and while the child may not get so many external put downs, the negative self talk is enough. It’s enough to stop the child from dreaming big enough, aiming high enough and trying enough! Its enough to weaken our overall self esteem. And the vicious thinking assures that every failure gets added as proof to our over critical self's repertoire. Here are five parenting tendencies that are chief in doing so. Check them out and see which you are doing and which you need to avoid - at all cost:
+It becomes better after 10 years, because increasingly available and important PEER evaluation is far more appreciative and less critical. But the damage is already done and while the child may not get so many external put downs, the negative self talk is enough. The focus on imperfection is enough to stop the child from dreaming big enough, aiming high enough and trying enough! Its enough to weaken our overall self esteem. And the vicious thinking assures that every failure gets added as proof to our over-critical self's repertoire. Here are five parenting tendencies that are chief in doing so. Check them out and see which you are doing and which you need to avoid - at all costs:
 
 1. no, No, NO!
 
-If what the child gets during the day is, "Don't touch this, don't eat this, don't waste your time, don't do like this, no pulling my hair, no playing with your hair, don't run, no jumping on sofa, don't eat fast, don't eat so slowly..
+If what the child gets during the day is a staple diet of, "Don't touch this, don't eat this, don't waste your time, don't do like this, no pulling my hair, no playing with your hair, don't run, no jumping on sofa, don't eat fast, don't eat so slowly..
 
-When our actions get negated, out thoughts gets negated and we start feeling that "I am not worthy (and capable) of thinking 'right'". To the extent that often children will do some actions just to see how soon they are stopped from doing so. They have learned what gets their parents attention. But the real damage is far deeper. Alternate approach: Try saying YES. Rather then saying what you want the child NOT to do, try saying what you want the child to do. Eg: Instead of "don't waste your time", say "its nice to focus on your work". Instead of "No, no pulling hair", say "Yes, rub my cheeks, Ahaaaa" etc.
+When our actions get negated, our thoughts get negated and we start feeling that "I am not worthy (and capable) of thinking 'right'". To the extent that often children will do some actions just to see how soon they are stopped from doing so. They have learnt what gets their parents attention. But the real damage is far deeper. Alternate approach: Try saying YES. Rather than saying what you want the child NOT to do, try saying what you want the child to do. Eg: Instead of "don't waste your time", say "its nice to focus on your work". Instead of "No, no pulling hair", say "Yes, rub my cheeks, Ahaaaa" etc.
 
 2. Comparison
 
